--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>do_an</name>
+	<name>do_an _update_</name>
 	<comment></comment>
 	<projects>
 	</projects>
